@@ -2,6 +2,8 @@
 
  * src/interface.c, src/interface.h, geany.glade:
    Rename Preferences dialog Interface subtab More -> Notebook tabs.
+ * src/toolbar.c, src/dialogs.c:
+   Use mimetype icon in File Properties dialog.
 
 
 2011-04-01  Colomban Wendling  <colomban(at)geany(dot)org>
